[tool.poetry]
name = "repl-nix-rptd-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_rptd_system"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
